# Syntax_analyzer

./: CMakeLists.txt  FirstMaker.cpp  FirstMaker.h  FollowMaker.cpp  FollowMaker.h  Parser.cpp  Parser.h  README.md  TableBuilder.cpp  TableBuilder.h  a  a.out  input  input.txt  main.cpp  out  outputPhase1.txt
Compiler/: TableBuilder.cpp  TableBuilder.h  a  codeInput.txt  inputForphase1.txt  main.cpp
Compiler/include/: Controller.h  DFA.h  DFAState.h  NFA.h  State.h  Token.h
Compiler/src/: Controller.cpp  DFA.cpp  DFAState.cpp  NFA.cpp  State.cpp  Token.cpp
